--- a/MobilReklame/MobilReklame/Views/MainPage.xaml
+++ b/MobilReklame/MobilReklame/Views/MainPage.xaml
@@ -25,14 +25,14 @@
 
         <ScrollViewer Grid.Column="1" Grid.Row="1" HorizontalScrollBarVisibility="Visible">
             <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
 
-            <Grid.RowDefinitions>
-                <RowDefinition Height="793*"/>
-            </Grid.RowDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="793*"/>
+                </Grid.RowDefinitions>
 
                 <Grid.Resources>
                     <Style TargetType="TextBlock" x:Name="textblocks">
@@ -73,6 +73,7 @@
                     <TextBlock Style="{StaticResource textblocks}" Text="Forbundet Kunde"/>
                     <TextBlock Style="{StaticResource textblocks}" Text="Opgave Beskrivelse"/>
                     <TextBlock Style="{StaticResource textblocks}" Text="Opgave Materialer" Margin="0,70,20,0"/>
+                    <TextBlock Style="{StaticResource textblocks}"/>
                 </StackPanel>
 
                 <StackPanel Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -95,6 +96,7 @@
                     <TextBox x:Name="CaseDescription" Style="{StaticResource textboxes}"/>
                     <TextBox x:Name="CaseMaterials" Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" Height="100" VerticalAlignment="Stretch"/>
                     <TextBox x:Name="OrderCustomer" Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" Height="100" VerticalAlignment="Stretch"/>
+                    <TextBlock Style="{StaticResource textblocks}"/>
                 </StackPanel>
             </Grid>
         </ScrollViewer> 
@@ -122,10 +124,20 @@
                     </Style>
                 </StackPanel.Resources>
 
-                <Button x:Name="NewCase" Content="New Case" Style="{StaticResource TabStyle}" Margin="20,20,0,10" Click="CaseCreation" />
-                <Button x:Name="CustomerLibrary" Content="Customer" Style="{StaticResource TabStyle}" Margin="20,20,0,10" Click="CustomerList"/>
+                <Button x:Name="NewCase" Style="{StaticResource TabStyle}" Margin="20,20,0,10" Click="CaseCreation">
+                    <SymbolIcon Symbol="Add"/>
+                </Button>
+
+                <Button x:Name="CustomerLibrary" Style="{StaticResource TabStyle}" Margin="20,20,0,10" Click="CustomerList">
+                    <StackPanel>
+                        <SymbolIcon Symbol="Contact"/>
+                        <TextBlock Text="Kunde Liste"/>
+                    </StackPanel>                
+                </Button>
                 <TextBox x:Name="SearchHere" Margin="20,10,0,0" PlaceholderText="Søg" VerticalAlignment="Center" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
-                <Button x:Name="Search" Content="S" Margin="0,10,0,0" Height="32"  VerticalAlignment="Stretch" Width="32" HorizontalAlignment="Center"/>
+                <Button x:Name="Search" Margin="0,10,0,0" Height="32"  VerticalAlignment="Stretch" Width="40" HorizontalAlignment="Center">
+                    <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE71E;"/>
+                </Button>
 
             </StackPanel>
 
@@ -154,7 +166,7 @@
         </Grid>
             
         <ListView x:Name="CaseList" Grid.RowSpan="2" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" Grid.Row="1"/>
-        
+
 
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2" FlowDirection="RightToLeft" Background="LightGray">
             <StackPanel.Resources>
@@ -166,12 +178,20 @@
                     <Setter Property="HorizontalAlignment" Value="center"/>
                 </Style>
             </StackPanel.Resources>
-
-            <Button x:Name="Delete" Content="Delete" Style="{StaticResource EditDel}" Margin="180,20,0,20"/>
-            <Button x:Name="Edit" Content="Edit" Style="{StaticResource EditDel}" Margin="40,20,0,20"/>
-
+            
+            <Button x:Name="Delete"  Style="{StaticResource EditDel}" Margin="180,20,0,20">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Delete"/>
+                    <SymbolIcon Symbol="Delete"/>
+                </StackPanel>
+            </Button>
+            <Button x:Name="Edit" Style="{StaticResource EditDel}" Margin="40,20,0,20">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Edit"/>
+                    <SymbolIcon Symbol="Edit"/>
+                </StackPanel>
+            </Button>
+            
         </StackPanel>
-
-        
     </Grid>
 </Page>
